Fix footer z-index

--- a/src/component/Footer/Footer.scss
+++ b/src/component/Footer/Footer.scss
@@ -13,6 +13,7 @@
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25),
     inset 0px 2px 2px rgba(0, 0, 0, 0.25);
   backdrop-filter: blur(96px);
+  z-index: 100;
 
   &__search-icon,
   &__profile-icon {
